Fix visual issue with the visualisation on mobile

--- a/components/homepage/section-2/style.scss
+++ b/components/homepage/section-2/style.scss
@@ -36,6 +36,7 @@ $depth-visualization-offset: rem(100);
 
   .visualization {
     display: inline-block;
+    max-width: rem(547);
 
     text {
       font-family: $font-family-2;
